# process-key-sender

./: .gitignore  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  PR_DESCRIPTION.md  README.md  SECURITY.md  deny.toml  test_global_hotkey.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yml  license-check.yml  security-audit.yml  supply-chain.yml
docs/: cli.md  configuration.md  platform-support.md
examples/configs/: advanced-config.json
scripts/: README.md  focus_key_presser.py
src/: cli.rs  config.rs  error.rs  global_hotkey.rs  key_sender.rs  lib.rs  main.rs  process_finder.rs  runner.rs
tests/: cli_test.rs  config_test.rs  integration_test.rs  key_sender_test.rs  process_finder_test.rs
