[package]
name = "process-key-sender"
version = "0.2.0"
edition = "2021"
authors = ["KyleDerZweite <kyle@process-key-sender.dev>"]
description = "Cross-platform keystroke automation tool for specific processes"
repository = "https://github.com/KyleDerZweite/process-key-sender"
license = "MIT"
keywords = ["automation", "cli", "cross-platform", "accessibility", "productivity"]
categories = ["command-line-utilities", "accessibility"]
rust-version = "1.85.0"

[[bin]]
name = "pks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
global-hotkey = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi"] }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "process_key_sender"
path = "src/lib.rs"