[package]
name = "process-key-sender"
version = "0.2.1"
edition = "2021"
authors = ["KyleDerZweite <kyle@process-key-sender.dev>"]
description = "Cross-platform keystroke automation tool for specific processes"
repository = "https://github.com/KyleDerZweite/process-key-sender"
license = "MIT"
keywords = ["automation", "cli", "cross-platform", "accessibility", "productivity"]
categories = ["command-line-utilities", "accessibility"]
rust-version = "1.85.0"

[[bin]]
name = "pks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
global-hotkey = "0.7.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "psapi"] }

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"

[lib]
name = "process_key_sender"
path = "src/lib.rs"
